# clavrs

./: .gitignore  Cargo.toml  Makefile.toml
doc/: doc.md  todo.txt
doc/diagram/: .$Lexer_Statemachine.drawio.bkp  .$Lexer_Statemachine.drawio.dtmp  .$Lifetimes.drawio.bkp  Lexer_Statemachine.drawio  Lifetimes.drawio
doc/internal/: meta_map.md
src/: main.rs
src/connection/: connection.rs  connection_state.rs  handle_instruction.rs  handle_operation.rs  mod.rs  permission.rs  permission_list.rs  permission_matrix.rs  permissions.rs  read_all_from_stream.rs
src/dbop/: execute.rs  mod.rs  op_type.rs  read.rs  read_write.rs  write.rs
src/lexer/: lex.rs  mod.rs  parse.rs  token.rs  validate.rs
