[package]
name = "clavrs"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.4.8", features = ["derive"] }
evmap = "10.0.2"
regex = "1.7.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
